# jupyterlab

./: .bumpversion.cfg  .cleanignore  .codespellignore  .dockerignore  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .eslintrc.typecheck.js  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .licenserc.yaml  .lintstagedrc  .meeseeksdev.yml  .npmrc  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .project  .readthedocs.yml  .stylelintignore  .stylelintrc.yaml  .travis.yml  .yarnrc  .yarnrc.yml  5000-errors.ipynb  AGENTS.md  CHANGELOG.md  CHANGELOG.temp  CLAUDE.md  CONTRIBUTING.md  CORPORATE.md  Coursera1a  Dockerfile  LICENSE  (+79 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  answered.yml  dependabot.yml  jupyterlab-probot.yml  labeler.yml  lock.yml  openssf-scorecard.yml  pull_request_template.md
.oxlint-plugins/: jupyter.js
adapters/: adapter.ts  editor_adapter.ts
api/: extractor.ts  index.ts  overrides.ts
bechmarks/: .gitignore  package.json  tsconfig.json
benchmarks/: .gitignore  README.md  analysis.vl.json  comparison.vl.json  package.json  tsconfig.json
binder/: README  README.md  config.py  config2.py  dodo.py  environment.yml  jupyter_config.py  jupyter_notebook_config.py  noxfile.py  overrides.json  postBuild  repos.yml  requirements.txt  start
builder/: README.md  metadata_schema.json  package.json  tsconfig.json
buildutils/: README.md  package-lock.json  package.json  tsconfig.json
charityfiles/: Snellgrove Lab1-Exploratory data Analysis.ipynb  commands.txt  repomap.md
classes/: _application_src_index_.jupyterfrontend.html  _application_src_index_.jupyterfrontend.ishell.childmessage.html  _application_src_index_.jupyterfrontend.ishell.resizemessage.html  _application_src_index_.jupyterlab.html  _application_src_index_.labshell.childmessage.html  _application_src_index_.labshell.html  _application_src_index_.labshell.resizemessage.html  _application_src_index_.layoutrestorer.html  _application_src_index_.router.html  _apputils_src_index_.collapse.childmessage.html  _apputils_src_index_.collapse.html  _apputils_src_index_.collapse.resizemessage.html  _apputils_src_index_.commandlinker.html  _apputils_src_index_.commandtoolbarbutton.html  _apputils_src_index_.dialog.childmessage.html  _apputils_src_index_.dialog.html  _apputils_src_index_.dialog.ibodywidget.childmessage.html  _apputils_src_index_.dialog.ibodywidget.resizemessage.html  _apputils_src_index_.dialog.renderer.html  _apputils_src_index_.dialog.resizemessage.html  _apputils_src_index_.iframe.childmessage.html  _apputils_src_index_.iframe.html  _apputils_src_index_.iframe.resizemessage.html  _apputils_src_index_.mainareawidget.childmessage.html  _apputils_src_index_.mainareawidget.html  _apputils_src_index_.mainareawidget.resizemessage.html  _apputils_src_index_.reactwidget.childmessage.html  _apputils_src_index_.reactwidget.html  _apputils_src_index_.reactwidget.resizemessage.html  _apputils_src_index_.sessioncontext.html  _apputils_src_index_.spinner.childmessage.html  _apputils_src_index_.spinner.html  _apputils_src_index_.spinner.resizemessage.html  _apputils_src_index_.thememanager.html  _apputils_src_index_.toolbar.childmessage.html  _apputils_src_index_.toolbar.html  _apputils_src_index_.toolbar.resizemessage.html  _apputils_src_index_.toolbarbutton.html  _apputils_src_index_.usesignal.html  _apputils_src_index_.vdommodel.html  (+354 more)
components/: free_tooltip.ts  icons.ts  statusbar.tsx  utils.spec.ts  utils.tsx
design/: about.md  focus_navigation.md  help.md  imagewidget.md  launcher.md  notebook.md  real_time_collab.md  terminal.md  terminal2.md
dev_mode/: bootstrap.js  imports.css  index.js  package.json  style.js  webpack.config.js  webpack.prod.config.js  webpack.prod.minimize.config.js  webpack.prod.release.config.js  webpack_plugins.js
docker/: Dockerfile  Dockerfile.dockerignore  environment.yml  jupyter_server_config.json  start.sh
docs/: Makefile  adding_content.md  conf.py  conftest.py  css.md  environment.yml  examples.md  extensions_dev.md  extensions_user.md  faq.md  globals.html  index.html  index.rst  make.bat  notebook.md  patterns.md  repo.md  requirements.txt  typedoc-custom.css  typedoc-customizations.js  virtualdom.md  xkcd_extension_tutorial.md  zero_to_extension.md
editor_integration/: cm_adapter.spec.ts  codemirror.ts  editor_adapter.ts  feature.spec.ts  testutils.ts
enums/: _application_src_index_.jupyterfrontend.ishell.flag.html  _application_src_index_.labshell.flag.html  _apputils_src_index_.collapse.flag.html  _apputils_src_index_.dialog.flag.html  _apputils_src_index_.dialog.ibodywidget.flag.html  _apputils_src_index_.iframe.flag.html  _apputils_src_index_.mainareawidget.flag.html  _apputils_src_index_.reactwidget.flag.html  _apputils_src_index_.spinner.flag.html  _apputils_src_index_.toolbar.flag.html  _cells_src_index_.cell.flag.html  _cells_src_index_.cellfooter.flag.html  _cells_src_index_.cellheader.flag.html  _cells_src_index_.icellfooter.flag.html  _cells_src_index_.icellheader.flag.html  _cells_src_index_.iinputprompt.flag.html  _cells_src_index_.inputarea.flag.html  _cells_src_index_.inputprompt.flag.html  _celltags_src_index_.addwidget.flag.html  _celltags_src_index_.tagwidget.flag.html  _codeeditor_src_index_.codeeditorwrapper.flag.html  _codeeditor_src_index_.jsoneditor.flag.html  _completer_src_index_.completer.flag.html  (+36 more)
example/: index.css  index.html  (+6 more)
jupyterlab/tests/mock_packages/test-hyphens/: .copier-answers.yml  MANIFEST.in  package.json  pyproject.toml  setup.py
jupyterlab/tests/mock_packages/test-hyphens-underscore/: .copier-answers.yml  MANIFEST.in  package.json  pyproject.toml  setup.py
jupyterlab/tests/mock_packages/test-hyphens-underscore/test_hyphens_underscore/: __init__.py
jupyterlab/tests/mock_packages/test-hyphens/test-hyphens/: __init__.py
jupyterlab/tests/mock_packages/test_no_hyphens/: .copier-answers.yml  MANIFEST.in  package.json  pyproject.toml  setup.py
jupyterlab/tests/mock_packages/test_no_hyphens/test_no_hyphens/: __init__.py
(+3602 files in other folders)
