[metadata]
name = jupyterlab
version = attr: jupyterlab._version.__version__
description = JupyterLab computational environment
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter.org
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 4
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    importlib-metadata>=3.6;python_version<"3.10"
    importlib-resources>=1.4;python_version<"3.9"
    ipykernel
    packaging
    tornado>=6.1.0
    jupyter_core
    jupyterlab_server>=2.11.1,<3
    jupyter_server>=1.16.0,<2
    notebook_shim>=0.1
    jinja2>=3.0.3
    ypy-websocket>=0.1.6
    jupyter_ydoc>=0.1.8

[options.extras_require]
docs =
    sphinx>=1.8
    sphinx-copybutton
    pydata-sphinx-theme
    pytest
    pytest-tornasync
    pytest-check-links
    jsx-lexer
    myst-parser
docs-screenshots =
    altair==4.2.0
    ipython==8.0.0
    ipywidgets==7.6.5
    jupyterlab-geojson==3.2.0
    jupyterlab-language-pack-zh-CN==3.2.post7
    matplotlib==3.5.1
    pandas==1.3.5
    scipy==1.7.3
    vdom==0.6
    vega_datasets==0.9.0
test =
    check-manifest
    coverage
    jupyterlab_server[test]>=2.11.1,<3
    pytest>=6.0
    pytest-check-links>=0.5
    pytest-cov
    pytest-console-scripts
    requests
    requests_cache
    virtualenv
    pre-commit
ui-tests = build

[options.entry_points]
console_scripts =
    jupyter-lab = jupyterlab.labapp:main
    jupyter-labextension = jupyterlab.labextensions:main
    jupyter-labhub = jupyterlab.labhubapp:main
    jlpm = jupyterlab.jlpmapp:main

[options.packages.find]
exclude = ['docs*', 'examples*']

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    tests/*: B011, F841
