[metadata]
name = jupyterlab
version = attr: jupyterlab._version.__version__
description = JupyterLab computational environment
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter.org
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    ipython
    packaging
    tornado>=6.1.0
    jupyter_core
    jupyterlab_server~=2.10
    jupyter_server>=1.16.0,<3
    jupyter_ydoc~=0.2.2
    jupyter_server_ydoc~=0.2.0
    nbclassic
    notebook<7
    jinja2>=2.1
    tomli;python_version<"3.11"

[options.extras_require]
test =
    check-manifest
    coverage
    jupyterlab_server[test]
    pre-commit
    pytest>=6.0
    pytest-cov
    pytest-console-scripts
    pytest-check-links>=0.5
    requests
    requests_cache
    virtualenv
ui-tests = build

[options.entry_points]
console_scripts =
    jupyter-lab = jupyterlab.labapp:main
    jupyter-labextension = jupyterlab.labextensions:main
    jupyter-labhub = jupyterlab.labhubapp:main
    jlpm = jupyterlab.jlpmapp:main

[options.packages.find]
exclude = ['docs*', 'examples*']
