[build-system]
requires = ["jupyter_packaging~=0.9,<2", "jupyterlab~=3.0"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["test-hyphens/labextension/**", "yarn.lock", ".*", "package-lock.json"]
